2005-08-12 Chris Wiebe
	Fix PR 106577: NPE in CTags Indexer
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsFileReader.java
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsIndexAll.java

2005-08-12 Chris Wiebe
	Fix PR 106778: IndexerTypesJob2 painfully slow
	* browser/org/eclipse/cdt/internal/core/browser/cache/IndexerTypesJob2.java
	Fix progress monitor
	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCacheManager.java

2005-08-11 Chris Wiebe
	Fix PR 104907,106415: type cache always running in background
	* browser/org/eclipse/cdt/core/browser/AllTypesCache.java
	* browser/org/eclipse/cdt/internal/core/browser/cache/TypeCacherJob.java

2005-07-26 Alain Magloire
	Fix PR 100992: IMethod were generated for implementation, we should generate
	IFunction for method defines outside of the class shell.
	* model/org/eclipse/cdt/internal/core/model/CModelBuilder.java

2005-07-22 Alain Magloire
	Fix PR 104908
	* plugin.xml

2005-07-22 Alain Magloire
	Fix the Copyright notice for epl.

2005-07-22 Chris Wiebe
	Fix for PR 104605: MachO parsing
	First pass at optimization. My test case went from >20 minutes to 5 seconds
	* utils/org/eclipse/cdt/utils/macho/MachO.java
	* utils/org/eclipse/cdt/utils/macho/MachOHelper.java
	* utils/org/eclipse/cdt/utils/macho/parser/MachOBinaryObject.java

2005-07-22 Chris Wiebe
	Fix for PR 104725
	* model/org/eclipse/cdt/internal/core/model/BinaryElement.java
	
2005-07-16 Alain Magloire
	Fix for PR 102327: Fire deltas when contentType is changed.
	* model/org/eclipse/cdt/core/model/ICElementDelta.java
	* model/org/eclipse/cdt/internal/core/model/CElementDelta.java
	* model/org/eclipse/cdt/internal/core/model/ContentTypeProcessor.java

2005-07-14 Vladimir Hirsl
	Fix for 103024: NPE in indexerEncoderUtil.nodeInVisitedExternalEheader
	Project was not being set when creating indexer in IndexManager#getDefaultIndexer().
	
	* index/org/eclipse/cdt/core/index/ICDTIndexer.java