@@ -1,3 +1,7 @@
+2005-08-30 Alain Magloire
+	PR 107150, code/patch written by Devin Steffler
+	* parser/org/eclipse/cdt/internal/core/parser/scanner2/BaseScanner.java
+
 2005-08-12 Chris Wiebe
 	Fix PR 106577: NPE in CTags Indexer
 	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagsFileReader.java
